changed abstract and intro

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,3 +1,17 @@
+@article{Hrstka,
+	title = "Improvements of real coded genetic algorithms based on differential operators preventing premature convergence",
+	journal = "Advances in Engineering Software",
+	volume = "35",
+	number = "3",
+	pages = "237 - 246",
+	year = "2004",
+	issn = "0965-9978",
+	doi = "https://doi.org/10.1016/S0965-9978(03)00113-3",
+	url = "http://www.sciencedirect.com/science/article/pii/S0965997803001133",
+	author = "Ondřej Hrstka and Anna Kučerová",
+	keywords = "Genetic algorithm, Binary algorithm, Reliability"
+}
+
 @article{Valiantzas,
 title = "New linearized two-parameter infiltration equation for direct determination of conductivity and sorptivity ",
 journal = "J. Hydrol.",
