--- a/version2.tex
+++ b/version2.tex
@@ -80,16 +80,16 @@
 \address[autor2]{Czech Technical University in Prague, Faculty of Civil Engineering, Department of Mechanics}
 
 \begin{abstract}
-This contribution addresses issues in identification of the soil hydraulic properties (SHP) obtained from inverse modeling of a single ring (SR) infiltration experiment. 
-The SR experimental  data  were obtained from series of in situ experiments conducted on a mountainous podzolic soil profile. 
-The main purpose of this inverse model was to evaluate the SHP of the top soil layer described here by the van Genuchten's (VG) parameters, and to answer the question whether the well-known SR experiment is robust enough to provide an estimate of these properties.
+This contribution addresses issues in the identification of soil hydraulic properties (SHP) obtained from inverse modeling of a single ring (SR) infiltration experiment. 
+The SR experimental  data  were obtained from a series of in situ experiments conducted on a highly heterogeneous mountainous podzolic soil profile. 
+The main purpose of this inverse analysis was to evaluate the SHP parameterized with the van Genuchten model, and to answer to what extent the well-known SR experiment is robust enough to provide unique estimate of these parameters.
 
-The top soil layer  SHP are very difficult to measure directly, since the thickness of the top soil layer is often much lower than the depth required to embed the SR or Guelph permeameter device or to obtain  undisturbed samples for further laboratory experiments.
+The SHP of the topsoil layer are very difficult to measure directly, since the thickness of the top soil layer is often much smaller than the depth required to embed the SR or Guelph permeameter device or to obtain undisturbed samples for further laboratory experiments.
 
 
-The main issue, which is addressed in this contribution, is the uniqueness of the Richards equation based inverse model of SR experiment with van Genuchten's constitutive function for the retention curve and Mualem's function for the unsaturated hydraulic conductivity. We tried to answer the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether are all of these parameters vulnerable with the non-uniqueness. The sophisticated differential evolution based algorithm SADE~\cite{grade}, which stores all identified local optima in memory was used for this analyses.
+We investigated the question whether is it possible to characterize the unsteady part of the SR infiltration experiment with a unique set of parameters representing  SHP, and whether all parameters are vulnerable to non-uniqueness. To evaluate non-uniqueness, local optima were identified and mapped using the simplified atavistic differential evolution algorithm \citep{Hrstka,grade}.   
 
-Further the issues in assigning the initial and boundary condition setup, the influence of spatial and temporal discretization on the values of the identified SHP, and the convergence issues with the Richards equation nonlinear operator during automatic calibration procedure are also mentioned here.
+We also discuss important issues regarding (i) the design of the numerical simulations, (ii) the influence of spatial and temporal discretization on the identified local optima and (iii) convergence issues with the nonlinear operator. 
 \end{abstract}
 
 \begin{keyword}
@@ -107,16 +107,16 @@ soil hydraulic properties \sep inverse modeling of the Richards equation \sep FE
 \section{Introduction}%[lukas]
 % -motivace
 
-Soil hydraulic properties (hereafter SHP), such as saturated hydraulic conductivity, residual and saturated weater content, and typically van Genuchten (hereafter VG) parameters~\citep{vangenuchten} governing the retention curve and the unsaturated hydraulic conductivity, are important for many hydrological models and engineering applications.  The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. 
+Soil hydraulic properties (hereafter SHP) are important for many hydrological models and engineering applications. The mountainous podzolic soil evaluated here is typical for the source areas of many major rivers in the Central European region. The top layer of the soil plays a key role in the rainfall-runoff process, because it is the top-soil that separates the rainfall into surface runoff and subsurface runoff. 
 
 
+Due to the rocks present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHP of the topsoil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
 
-Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHP of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
 
+In our study, the well-known single ring (hereafter SR) method was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The SR infiltrometer is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The SR infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous medium is kept relatively undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. The top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter  \citep{AnguloJaramillo,ReynoldsWDGP}. 
 
-In our study, the well-known single ring (hereafter SR) method was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The SR infiltrometer is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The SR infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous medium is kept relatively undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. The top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
- 
-The flow in a variably saturated porous medium is governed by the Richards equation~\citep{richards} parametrized by SHP represented by the saturated hydraulic conductivity, the residual and saturated water content, and VG parameters. This model will abbreviated in this contribution as REVG.
+The Richards equation ~\citep{richards} describes flow in variably saturated porous media. In order to model environmental processes and engineering applications with the Richards equation knowledge of the SHP is essential. SHP can be summarized by the the soil water retention curve and soil hydraulic conductivity curve. In this contribution, the SHP are parametrized with the frequently used Mualem-van Genuchten model ~/citep{vangenuchten}. We refer to this model as REVG.
+
 
 
 % with VG parameters governing retention curve and unsaturated hydraulic conductivity, where the SHP are typically described by VG parameters, saturated hydraulic conductivity and residual and saturated water content.
@@ -126,32 +126,33 @@ The flow in a variably saturated porous medium is governed by the Richards equat
 
 
 
- Several studies  compared REVG inverse modeling of tension infiltrometers  \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}. It states that the retention curves obtained from this inverse modeling using tension infiltrometer data are often not in a good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). 
- There are various theories explaining this issue as e.g. the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used.  But most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
-But on the other hand several studies  reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the REVG analyses \citep{Ramos, Schwartz}. 
-An identification of SHP  from transient infiltration experiment was a subject of numerous publications in past decades already \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP  obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of his inverse model was preserved by considering the dynamically changing pressure head, water content and even tracer concentration.
+Several studies  compared REVG inverse modeling of tension infiltrometers  \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2, rezaei}. They state that the retention curves obtained from inverse modeling using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples. In particular, the saturated water content obtained from an inverse model of REVG is typically distinctly lower than the experimentally established value \citep{Simunek1, Verbist}. 
+There are various theories explaining the issue to be due to (i) the effect of hysteresis as the drying process in the laboratory differs from the wetting process in the field, (ii) the effect of entrapped air in the field ~\citep{Fodor}, where the saturation may not fully correspond the pressure head, and (iii) the effect of macropores, which are excluded when a tension infiltrometer is used.  Most importantly the soil samples usually examined in the laboratory are typically much smaller than the representative elementary volume~\citep{scharnagl}.
+However, several studies  reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from REVG analyses \citep{Ramos, Schwartz}. 
+The identification of SHP from transient infiltration experiments has been a subject of numerous publications in past decades \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} reported a close correspondence between the SHP obtained from the inverse modeling of dynamic transient infiltration experiments with those obtained from steady-state laboratory experiments, where the uniqueness of the inverse model was preserved by considering the dynamically changing pressure head, water content and even tracer concentration.
 
-The non-uniqueness of the REVG inverse model is already a very well-known issue, and has been described by a number of publications over the last decades~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix, which is represented by derivatives of the objective function,  often involves difficulties in maintaining truncation and also round-off errors.
-\cite{beven2003-uncertain} demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
-the non-unique definition with the unknown residual and saturated water content was considered, despite \cite{mous1993} noticed that  in case of an absence of the water content experimental data, the residual water content should be excluded from the identification.
-The definition of unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. %Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
+The non-uniqueness of the REVG inverse model is already a very well-known issue, and has been described by a number of publications over the last decades~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. \todo{must be checked!!}\textbf{However, we have not succeeded in our search for more recent contributions in this field.} \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of the sensitivity matrix, which is defined by the derivatives of the objective function, often involves difficulties in managing truncation and round-off errors.
+\cite{beven2003-uncertain} demonstrated on a real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media can represent the layered unsaturated zone and provide acceptable simulations of the observed aquifer recharges.  \cite{mous1993} explained that in case of the absence of water content data, the residual water content should be excluded from the identification to avoid non-uniqueness. However, \cite{beven2003-uncertain} used
+a non-unique definition where both the unknown residual and saturated water content were considered.
+The definition of a unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. %Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
 
-And yet another challenging issue is the treatment of the nonlinear operator of the Richards equation. \cite{beven2003-uncertain} reported that during their Monte Carlo simulations on wide ranges of SHPs values 56\% of simulations were rejected, because of convergence problems. 
-It wasn't mentioned in the paper explicitly, we can only suggest that these convergence issues originated from the nonlinear operator treatment -- the outer iterations.
-It could be easily concluded, that if we use simple Picard method for the nonlinear operator, and we increase the iteration criterion (which is typically a so-called $h$ or $\theta$ tolerance), we will obtain less accurate solution but we will also need less iterations for the Picard method. If we further increase the criterion we will end up with semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we will always need just a single outer iteration.
+Another challenging issue is the treatment of the nonlinear operator of the Richards equation. \cite{beven2003-uncertain} reported that 56\% of the simulations were rejected during Monte Carlo simulations on a wide range of parameters, because of convergence problems. 
+Their study did not mention explicitly why. We assume that these convergence issues originated from the nonlinear operator treatment -- the outer iterations.
+It could be concluded, that if we use a simple Picard method for the nonlinear operator, and we increase the iteration criterion (which is typically referred to as $h$ or $\theta$ tolerance), we will obtain a less accurate solution but we will also need less iterations for the Picard method. If we further increase the criterion we will end up with a semi-implicit solution, where the constitutive functions in the Richards equation are evaluated from the previous time level solution -- thus we just need a single outer iteration.
 
 
 
-And so the following questions arise. 
+And so the following questions arise: 
 \begin{itemize}
-\item Is it possible to approximate the unsteady SR experiment by REVG model, where the only unknown parameters represent the thin top-soil layer SHP, by a unique set of parameters? \
-\item If not are all SHPs parameters vulnarable with this non-uniqueness?
-\item Are the SHP parameters identified by inverse analyses of SR infiltration dependent on the treatment of the nonlinear operator of the Richards equation? Is there any benefit in using the accurate Newton or Picard iteration method (which can often lead to a slow convergence or even divergence of the REVG nonlinear operator), or can we obtain a reasonable estimate with just the semi-implicit scheme?
+	\item Is it possible to approximate the unsteady SR experiment using the REVG model, where the only unknown parameters represent the thin topsoil layer, by a unique set of parameters? \
+	\item If not, are all parameters vulnerable to non-uniqueness?
+	\item Are the parameters identified by inverse analysis of SR infiltration dependent on the treatment of the nonlinear operator of the Richards equation? Is there any benefit in using the accurate Newton or Picard iteration method, which can often lead to slow convergence or even divergence, or can we obtain a reasonable estimate with just the semi-implicit scheme?
 \end{itemize}
 
 
 
-The aim of this paper is to answer these proposed issues. The inverse modeling problem applied here for evaluating these issues is  a real world problem of identification of the SHP  for top soil podzolic horizons of experimental catchment Modrava, Sumava National Park, Czech Republic.  The SHP for the lower horizons were already described by various field and laboratory experiments and by data processing (e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}), only the top soil SHP are difficult to  obtain directly. Moreover, for this type of top soil layer it is even a very difficult to guess some estimates of its SHPs. However, the knowledge of the lower horizons should decrease the number of unknowns of this inverse problem. In addition to answering the given questions, which are nearly classical but not satisfactory resolved issues in this field of research, we will also try to address issues with initial and boundary condition setup for the approximation of SR infiltration process. And finally, the numerical issues originating from the convection term in the Richards equation representing the axisymmetric SR infiltration flux will be also discussed in this work.
+The aim of this paper is to answer these questions. We approach these issues using a real-world problem aiming to identify SHP for the top soil layer in the experimental catchment Modrava in the \v{S}umava National Park, Czech Republic. The SHP for lower soil layers were already identified through various field and laboratory experiments and by data processing %(e.g. pedotransfer functions, see Rosetta code~\citep{Schaap}). 
+%Since direct measurements are difficult to obtain for the topsoil, it is also very difficult to narrow down the parameter ranges. However, knowledge of the lower soil layers should decrease the number of unknowns of this inverse problem. 
 
 
 
