--- a/version2.tex
+++ b/version2.tex
@@ -198,22 +198,28 @@ are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I wou
 %
 
  \begin{table}[ht]
-\begin{center}
-\caption{Soil characteristics for the soil horizons.}
-\begin{small}
-\doublespacing
-\begin{tabular}{c | c  c  c  c  c}
-\toprule
-horizon & clay ($<2\;\mu$m) & silt ($2\;\mu$m -- 0.05~mm) & sand (0.05 -- 2 mm) & gravel ($>$ 2 mm) & bulk density (g.cm$^{-3}$) \\ \hline
-E       & 1\%               & 20\%                        & 79\%                & 32\% & 1.4 \\ 
-Bhs + Bs & 7\%              & 32\%                        & 61 \%               & 30\% & 1.3 \\
-C        &      ??          & ??                          & ??                  & ?? & 1.3 \\ %I am planning to add data next week, I am waiting for additional textural analysis.
-\toprule
-\end{tabular}
-\end{small}
-\label{tab:soiltxt}
-\end{center}
-\end{table}
+ 	\begin{center}
+ 		\caption{Fractions of the fine soil (< 2 mm) and skeleton(> 2mm) and bulk density of the E and Bhs+Bs horizons.}
+ 		\begin{small}
+ 			\doublespacing
+ 			\begin{tabular}{l c  c  c  c  c}
+ 				\toprule
+ 				horizon & clay & silt & sand  & gravel & bulk density  \\ 
+ 				&  $<2\;\mu$m & $2\;\mu$m -- 0.05~mm & 0.05 -- 2 mm & $>$ 2 mm & g.cm$^{-3}$ \\ \hline
+ 				\multirow{2}{*}{E}      & \multicolumn{3}{c}{68\%}               & \multirow{1}{*}{32\%}  &\multirow{1}{*}{1.4}   \\ 
+ 				\cmidrule{2-4}
+ 				&  1\%               & 20\%                        & 79\%      & &\\
+ 				
+ 				\multirow{2}{*}{Bhs + Bs }      & \multicolumn{3}{c}{70\%}               & \multirow{1}{*}{3\%}  &\multirow{1}{*}{1.3}   \\ 
+ 				\cmidrule{2-4}
+ 				&7\%           & 32\%                       & 61\%          & &\\
+ 				
+ 				\toprule
+ 			\end{tabular}
+ 		\end{small}
+ 		\label{tab:soiltxt}
+ 	\end{center}
+ \end{table}
 
 
 
