--- a/version2.tex
+++ b/version2.tex
@@ -199,7 +199,7 @@ are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I wou
 
  \begin{table}[ht]
  	\begin{center}
- 		\caption{Fractions of the fine soil (< 2 mm) and skeleton(> 2mm) and bulk density of the E and Bhs+Bs horizons.}
+ 		\caption{Fractions of the fine soil (2 mm) and skeleton( 2mm) and bulk density of the E and Bhs+Bs horizons.}
  		\begin{small}
  			\doublespacing
  			\begin{tabular}{l c  c  c  c  c}
@@ -210,7 +210,7 @@ are given in the table~\ref{tab:soiltxt}.\todo{I don't get the percentage, I wou
  				\cmidrule{2-4}
  				&  1\%               & 20\%                        & 79\%      & &\\
  				
- 				\multirow{2}{*}{Bhs + Bs }      & \multicolumn{3}{c}{70\%}               & \multirow{1}{*}{3\%}  &\multirow{1}{*}{1.3}   \\ 
+ 				\multirow{2}{*}{Bhs + Bs }      & \multicolumn{3}{c}{70\%}               & \multirow{1}{*}{30\%}  &\multirow{1}{*}{1.3}   \\ 
  				\cmidrule{2-4}
  				&7\%           & 32\%                       & 61\%          & &\\
  				
