--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -104,6 +104,22 @@ ResearcherID-Numbers = {{Lal, Rattan/D-2505-2013}},
   publisher={Catena Verlag, Cremlingen-Destedt, Germany}
 }
 
+@book{babuska,
+  title={The Finite Element Method and Its Reliability},
+  author={Babuska, I. and Strouboulis, T.},
+  isbn={0198502761}, 
+  year={2001},
+  publisher={Oxford University Press}
+  }
+  
+ @book{braess,
+  title={Finite elements: Theory, fast solvers, and applications in solid mechanics},
+  author={Braess, D.},
+  isbn={0521581877}, 
+  year={1997},
+  publisher={Cambridge University Press}
+  } 
+
 @book{Dingman,
   title={Physical Hydrology, second ed.},
   author={Dingman, S.L.},
@@ -1728,6 +1744,28 @@ doi="10.1007/s10444-008-9075-6",
 url="https://doi.org/10.1007/s10444-008-9075-6"
 }
 
+@article {zienkiewicz1976,
+author = {Christie, I. and Griffiths, D. F. and Mitchell, A. R. and Zienkiewicz, O. C.},
+title = {Finite element methods for second order differential equations with significant first derivatives},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {10},
+number = {6},
+publisher = {John Wiley & Sons, Ltd},
+issn = {1097-0207},
+url = {http://dx.doi.org/10.1002/nme.1620100617},
+doi = {10.1002/nme.1620100617},
+pages = {1389--1396},
+year = {1976},
+}
+
+@book{roos-layers,
+  title={Numerical Methods for Singularly Perturbed Differential Equations, Convection-Diffusion and Flow Problems},
+  author={Roos, H., G. and Stynes, M. and Tobiska, L.},
+  isbn={978-3-662-03206-0}, 
+  year={1996},
+  publisher={Springer-Verlag Berlin Heidelberg}
+  }
+
 @article{bellman1970,
 title = "On structural identifiability",
 journal = "Mathematical Biosciences",
@@ -1783,3 +1821,5 @@ keywords = "Lognormal distribution–Mualem (LDM) function",
 keywords = "Capillary pressure curve",
 keywords = "Relative permeability curve"
 }
+
+
